Removed windows 7 check on enabling SayStatic.